# tree-sitter-htmljinja2

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  justfile  package.json  pyproject.toml  setup.py  tree-sitter.json  utils.js
bindings/c/: tree-sitter-htmljinja2.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_htmljinja2/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHtmlJinja2/: htmljinja2.h
bindings/swift/TreeSitterHtmlJinja2Tests/: TreeSitterHtmlJinja2Tests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: sample.html
test/corpus/: cases.txt  real-world.html  real-world.txt
test__/corpus/: if.txt
